Squashed commit of the following:
commit 1184dc273da14f75df9b818a7a9946a25b599b2f
Author: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Date:   Fri Feb 4 09:20:36 2022 +0000

    Bump google-cloud-datastore from 2.2.3 to 2.2.4

    Bumps [google-cloud-datastore](https://github.com/googleapis/java-datastore) from 2.2.3 to 2.2.4.
    - [Release notes](https://github.com/googleapis/java-datastore/releases)
    - [Changelog](https://github.com/googleapis/java-datastore/blob/main/CHANGELOG.md)
    - [Commits](https://github.com/googleapis/java-datastore/compare/v2.2.3...v2.2.4)

    ---
    updated-dependencies:
    - dependency-name: com.google.cloud:google-cloud-datastore
      dependency-type: direct:production
      update-type: version-update:semver-patch
    ...

    Signed-off-by: dependabot[bot] <support@github.com>

commit 4166f8502635b6f3350d4644cb05c9f8419b4d5e
Merge: 4037861668 9d3e21365f
Author: Simone Bordet <simone.bordet@gmail.com>
Date:   Thu Feb 3 11:25:39 2022 +0100

    Merge pull request #7530 from eclipse/jetty-10.0.x-7529-upgrade-quiche-0_11_0

    Upgrade quiche native lib to version 0.11.0

commit 9d3e21365f5b08223528063c69c0cf33ff0183cb
Author: Ludovic Orban <lorban@bitronix.be>
Date:   Thu Feb 3 10:46:20 2022 +0100

     #7529 upgrade quiche native lib to version 0.11.0

    Signed-off-by: Ludovic Orban <lorban@bitronix.be>

commit 40378616681e8b8664b4fcdab7cc4efe1ce64244
Author: Simone Bordet <simone.bordet@gmail.com>
Date:   Thu Feb 3 09:51:37 2022 +0100

    Fixes #7514 - Adding InheritedListeners to already-started components… (#7522)

    * Fixes #7514 - Adding InheritedListeners to already-started components can cause IllegalStateException

    Removed the unnecessary check-and-throw statements from SelectorManager.
    Use COW array for listeners that can be modified whilst selector is running.

    Signed-off-by: Simone Bordet <simone.bordet@gmail.com>
    Signed-off-by: Greg Wilkins <gregw@webtide.com>
    Co-auth